--- a/server/server.template.ejs
+++ b/server/server.template.ejs
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <%- title %>
 
   <%- style %>
 </head>
 <body>
-  <%- appString %>
+  <div id="root"><%- appString %></div>
 
   <%- scripts %>
 </body>
